--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       </div>
       <div class="gallery-card">
         <img src="images/image2.png" alt="LED Home 2"/>
-        <div class="cap">Backyard with Smart Color Zoning</div>
+        <div class="cap">Residential Home with Smart Color Zoning</div>
       </div>
       <div class="gallery-card">
         <img src="images/image3.png" alt="LED Business"/>
