--- a/index.html
+++ b/index.html
@@ -2,110 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>getITfixed – Friendly Tech Help for Seniors</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>getITfixed – Tech Help for Seniors</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: #0057b8;
-      color: white;
-      padding: 1.5rem 1rem;
-      text-align: center;
-    }
-    nav {
-      background: #003d82;
-      padding: 0.75rem;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .hero {
-      padding: 3rem 1rem;
-      text-align: center;
-      background: linear-gradient(to bottom right, #e0f2ff, #ffffff);
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-    .section {
-      padding: 2rem 1rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .section h2 {
-      font-size: 1.75rem;
-      margin-bottom: 1rem;
-    }
-    .footer {
-      background: #003d82;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
+    body { margin:0; font-family: 'Open Sans', Arial, sans-serif; color:#00264D; background:#f8f9fa; }
+    header { background:#00264D; color:#90EE90; padding:1em; text-align:center; }
+    nav { background:#003d73; display:flex; justify-content:center; gap:1.5em; padding:0.75em; }
+    nav a { color:#fff; text-decoration:none; font-weight:600; }
+    nav a:hover, nav a.active { color:#003d73; background:#90EE90; padding:0.5em; border-radius:6px; }
+    .hero { text-align:center; padding:4em 1em; background:#90EE90; color:#00264D; }
+    .hero h1 { font-size:2.5em; margin-bottom:0.5em; }
+    .hero p { font-size:1.2em; max-width:700px; margin:0 auto; }
+    .section { max-width:1100px; margin:2em auto; padding:0 1em; }
+    .section h2 { font-size:2em; margin-bottom:0.7em; }
+    .features { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:1.5em; }
+    .feature { background:#fff; border-radius:10px; padding:1.5em; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
+    .feature i { font-size:2em; color:#90EE90; margin-bottom:0.5em; }
+    footer { background:#00264D; color:#fff; text-align:center; padding:1em; font-size:0.9em; }
+    @media(max-width:600px){ .hero h1 { font-size:1.8em; } nav { flex-wrap:wrap; } }
   </style>
 </head>
 <body>
   <header>
     <h1>getITfixed</h1>
-    <p>Fast, Friendly, and Affordable Tech Help for Seniors</p>
+    <p>Friendly Tech Help for Seniors & Home Tech Support</p>
   </header>
-
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html" class="active">Home</a>
     <a href="services.html">Services</a>
     <a href="reviews.html">Reviews</a>
     <a href="#about">About</a>
   </nav>
 
-  <div class="hero">
-    <h1>Need Help with Technology?</h1>
-    <p>We specialize in security camera setup, Wi-Fi troubleshooting, phone upgrades, and home tech for older adults. Let us make technology simple and stress-free.</p>
-  </div>
+  <section class="hero">
+    <h1>Simple, Reliable Tech Help in Your Home or Remotely</h1>
+    <p>From Wi‑Fi setup and security cameras to phone help and smart home tech — we make technology easy and reliable.</p>
+  </section>
 
-  <div class="section" id="about">
-    <h2>Why Choose getITfixed?</h2>
+  <section class="section" id="about">
+    <h2>Why getITfixed?</h2>
     <ul>
-      <li>✅ In-home or remote help for all your tech needs</li>
-      <li>✅ Patient and clear communication — no tech jargon</li>
-      <li>✅ Trusted by Arizona families and seniors</li>
+      <li>Local and trusted in Arizona</li>
+      <li>Patient support—no jargon, just help</li>
+      <li>Remote or in‑home services available</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>We Can Help With:</h2>
-    <ul>
-      <li>📷 Security camera installation</li>
-      <li>📶 Wi-Fi troubleshooting and upgrades</li>
-      <li>📱 Phone upgrades and data transfer</li>
-      <li>💻 Computer setup & cleanup</li>
-      <li>🖥️ Smart home setup (TVs, Alexa, etc.)</li>
-    </ul>
-  </div>
+  <section class="section">
+    <h2>Our Services</h2>
+    <div class="features">
+      <div class="feature">
+        <i class="fa-solid fa-camera"></i>
+        <h3>Security Camera Setup</h3>
+        <p>We install and configure indoor & outdoor cameras, secure remote viewing & motion alerts.</p>
+      </div>
+      <div class="feature">
+        <i class="fa-solid fa-wifi"></i>
+        <h3>Wi‑Fi & Network Help</h3>
+        <p>Optimize your wireless coverage, upgrade routers, and improve speed throughout your home.</p>
+      </div>
+      <div class="feature">
+        <i class="fa-solid fa-mobile-screen-button"></i>
+        <h3>Smartphone & Phone Support</h3>
+        <p>Help with new phones, apps, syncing photos, transferring contacts, and more.</p>
+      </div>
+      <div class="feature">
+        <i class="fa-solid fa-laptop"></i>
+        <h3>Computer Tune‑Up & Cleanup</h3>
+        <p>Software updates, virus scans, speed boosts, and help with Zoom, email, and basics.</p>
+      </div>
+      <div class="feature">
+        <i class="fa-solid fa-tv"></i>
+        <h3>Smart Home & Streaming Setup</h3>
+        <p>Install streaming devices, smart assistants (Alexa, Google), and teach how to use them.</p>
+      </div>
+    </div>
+  </section>
 
-  <footer class="footer">
-    &copy; 2025 getITfixed – Serving Arizona with Care & Tech Expertise
+  <section class="section">
+    <h2>Ready to Get Started?</h2>
+    <p><a href="reviews.html">Read what customers say →</a> or click <a href="#contact">here</a> to book a free consultation.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 getITfixed · Serving Arizona with personal support<br>
+    Phone: (123) 456‑7890 | Email: info@getitfixed.com
   </footer>
 </body>
 </html>
-
-
