--- a/index.html
+++ b/index.html
@@ -1,93 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>getITfixed – Tech Help for Seniors</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>getITfixed - Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; font-family: 'Open Sans', Arial, sans-serif; color:#00264D; background:#f8f9fa; }
-    header { background:#00264D; color:#90EE90; padding:1em; text-align:center; }
-    nav { background:#003d73; display:flex; justify-content:center; gap:1.5em; padding:0.75em; }
-    nav a { color:#fff; text-decoration:none; font-weight:600; }
-    nav a:hover, nav a.active { color:#003d73; background:#90EE90; padding:0.5em; border-radius:6px; }
-    .hero { text-align:center; padding:4em 1em; background:#90EE90; color:#00264D; }
-    .hero h1 { font-size:2.5em; margin-bottom:0.5em; }
-    .hero p { font-size:1.2em; max-width:700px; margin:0 auto; }
-    .section { max-width:1100px; margin:2em auto; padding:0 1em; }
-    .section h2 { font-size:2em; margin-bottom:0.7em; }
-    .features { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:1.5em; }
-    .feature { background:#fff; border-radius:10px; padding:1.5em; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
-    .feature i { font-size:2em; color:#90EE90; margin-bottom:0.5em; }
-    footer { background:#00264D; color:#fff; text-align:center; padding:1em; font-size:0.9em; }
-    @media(max-width:600px){ .hero h1 { font-size:1.8em; } nav { flex-wrap:wrap; } }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f8f9fa;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    header {
+      background: #0057a8;
+      color: #fff;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-weight: 800;
+      font-size: 1.4rem;
+    }
+
+    nav a {
+      color: #fff;
+      margin-left: 1.5rem;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 4rem 2rem;
+      background: #e6f2ff;
+    }
+
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      color: #444;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .cta-button {
+      background: #0057a8;
+      color: white;
+      padding: 0.8rem 1.6rem;
+      border: none;
+      margin-top: 1.5rem;
+      font-size: 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .services-section {
+      padding: 4rem 2rem;
+      background: #fff;
+      text-align: center;
+    }
+
+    .services-section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    .services-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .service-card {
+      background: #f1f1f1;
+      padding: 1.5rem;
+      border-radius: 12px;
+      width: 260px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+      text-align: left;
+    }
+
+    .service-card h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background: #e6f2ff;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
+
 <body>
   <header>
-    <h1>getITfixed</h1>
-    <p>Friendly Tech Help for Seniors & Home Tech Support</p>
+    <div class="logo">getITfixed</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="reviews.html">Reviews</a>
+    </nav>
   </header>
-  <nav>
-    <a href="index.html" class="active">Home</a>
-    <a href="services.html">Services</a>
-    <a href="reviews.html">Reviews</a>
-    <a href="#about">About</a>
-  </nav>
 
   <section class="hero">
-    <h1>Simple, Reliable Tech Help in Your Home or Remotely</h1>
-    <p>From Wi‑Fi setup and security cameras to phone help and smart home tech — we make technology easy and reliable.</p>
+    <h1>Your One-Stop Tech Help</h1>
+    <p>We help seniors and families set up home Wi-Fi, phones, security cameras, and more — all with friendly, in-home support.</p>
+    <button class="cta-button">Get Started</button>
   </section>
 
-  <section class="section" id="about">
-    <h2>Why getITfixed?</h2>
-    <ul>
-      <li>Local and trusted in Arizona</li>
-      <li>Patient support—no jargon, just help</li>
-      <li>Remote or in‑home services available</li>
-    </ul>
-  </section>
-
-  <section class="section">
-    <h2>Our Services</h2>
-    <div class="features">
-      <div class="feature">
-        <i class="fa-solid fa-camera"></i>
-        <h3>Security Camera Setup</h3>
-        <p>We install and configure indoor & outdoor cameras, secure remote viewing & motion alerts.</p>
+  <section class="services-section">
+    <h2>Popular Services</h2>
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>Wi-Fi Setup</h3>
+        <p>Get strong, secure Wi-Fi throughout your home with our expert setup service.</p>
       </div>
-      <div class="feature">
-        <i class="fa-solid fa-wifi"></i>
-        <h3>Wi‑Fi & Network Help</h3>
-        <p>Optimize your wireless coverage, upgrade routers, and improve speed throughout your home.</p>
+      <div class="service-card">
+        <h3>Security Cameras</h3>
+        <p>We'll install and configure indoor or outdoor cameras so you feel safe and in control.</p>
       </div>
-      <div class="feature">
-        <i class="fa-solid fa-mobile-screen-button"></i>
-        <h3>Smartphone & Phone Support</h3>
-        <p>Help with new phones, apps, syncing photos, transferring contacts, and more.</p>
-      </div>
-      <div class="feature">
-        <i class="fa-solid fa-laptop"></i>
-        <h3>Computer Tune‑Up & Cleanup</h3>
-        <p>Software updates, virus scans, speed boosts, and help with Zoom, email, and basics.</p>
-      </div>
-      <div class="feature">
-        <i class="fa-solid fa-tv"></i>
-        <h3>Smart Home & Streaming Setup</h3>
-        <p>Install streaming devices, smart assistants (Alexa, Google), and teach how to use them.</p>
+      <div class="service-card">
+        <h3>Phone Help</h3>
+        <p>We teach you how to use your smartphone, fix issues, or transfer everything from your old phone.</p>
       </div>
     </div>
   </section>
 
-  <section class="section">
-    <h2>Ready to Get Started?</h2>
-    <p><a href="reviews.html">Read what customers say →</a> or click <a href="#contact">here</a> to book a free consultation.</p>
-  </section>
-
   <footer>
-    &copy; 2025 getITfixed · Serving Arizona with personal support<br>
-    Phone: (123) 456‑7890 | Email: info@getitfixed.com
+    &copy; 2025 getITfixed. All rights reserved.
   </footer>
 </body>
+
 </html>
