--- a/reviews.html
+++ b/reviews.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Customer Reviews | getITfixed</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; }
+    body { background: #f5f7fa; color: #222; line-height: 1.6; }
+    header { background: #111827; color: white; padding: 1.5rem 2rem; display: flex; justify-content: space-between; align-items: center; }
+    header h1 { font-size: 1.5rem; }
+    nav a { color: white; text-decoration: none; margin-left: 1.5rem; font-weight: 600; }
+    .container { max-width: 1000px; margin: 2rem auto; padding: 0 1.5rem; }
+    .section-title { font-size: 2rem; font-weight: 700; text-align: center; margin-bottom: 2rem; }
+    .review-card { background: white; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); padding: 1.5rem; margin-bottom: 1.5rem; transition: transform 0.2s ease; }
+    .review-card:hover { transform: translateY(-4px); box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
+    .review-card h3 { margin-bottom: 0.25rem; }
+    .stars { color: #fbbf24; margin-bottom: 0.75rem; }
+    a.review-link { text-decoration: none; color: inherit; display: block; }
+    footer { background: #111827; color: white; text-align: center; padding: 1rem 0; margin-top: 3rem; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>getITfixed</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="reviews.html">Reviews</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <h2 class="section-title">What Our Customers Say</h2>
+
+    <a class="review-link" href="https://www.yelp.com/biz/getitfixed-phoenix" target="_blank">
+      <div class="review-card">
+        <h3>Linda R. <span style="font-size: 0.85rem; color: #888;">(Yelp)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"They set up my Wi-Fi and security system. Super patient and explained everything! Highly recommend for seniors like me."</p>
+      </div>
+    </a>
+
+    <a class="review-link" href="https://g.page/r/CU0-EXAMPLE-URL" target="_blank">
+      <div class="review-card">
+        <h3>Mark D. <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"Fast, friendly, and fixed my phone in under 15 minutes. Great value and service!"</p>
+      </div>
+    </a>
+
+    <a class="review-link" href="https://www.yelp.com/biz/getitfixed-mesa" target="_blank">
+      <div class="review-card">
+        <h3>Sarah T. <span style="font-size: 0.85rem; color: #888;">(Yelp)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"They helped upgrade my parents' phones and set up their home devices. Very professional and trustworthy team."</p>
+      </div>
+    </a>
+
+    <a class="review-link" href="https://g.co/kgs/XCHEhM4" target="_blank">
+      <div class="review-card">
+        <h3>Antonio Gonzalez <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"I recently had the pleasure of using GetItFixed IT Services, and I can't recommend them highly enough! We were facing a significant issue with a stubborn printer... Dominic quickly assessed the situation and got to work. Not only did he fix it fast, but he also offered a very reasonable price. Thanks to Dominic, our office is back on track!"</p>
+      </div>
+    </a>
+
+    <a class="review-link" href="https://g.co/kgs/Fy9Vupa" target="_blank">
+      <div class="review-card">
+        <h3>Analeigha Quintino-Zavala <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"I had an issue with my laptop running extremely slowww, and Dominic got it back to running so fast in no time! Dominic was knowledgeable, professional, and explained everything in a way I could understand. The pricing was fair, and the service was top-notch. Highly recommend!"</p>
+      </div>
+    </a>
+
+    <a class="review-link" href="https://g.co/kgs/Vut4gsG" target="_blank">
+      <div class="review-card">
+        <h3>Annie M <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"Dominic came to the house the same day my husband called. He diagnosed the issue on our PC, took it with him for the actual repair and had it back to us the next day. I can’t express enough how polite, professional and knowledgeable he is. His price is beyond fair. And to top it off he helped go after our husky when he escaped!"</p>
+      </div>
+    </a>
+
+  </div>
+
+  <footer>
+    <p>&copy; 2025 getITfixed — All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
