--- a/index.html
+++ b/index.html
@@ -1,120 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>getITfixed - Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <title>getITfixed | Tech Support for Your Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
-      color: #222;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #0057a8;
-      color: #fff;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo {
-      font-weight: 800;
-      font-size: 1.4rem;
-    }
-
-    nav a {
-      color: #fff;
-      margin-left: 1.5rem;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .hero {
-      text-align: center;
-      padding: 4rem 2rem;
-      background: #e6f2ff;
-    }
-
-    .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .hero p {
-      font-size: 1.1rem;
-      color: #444;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    .cta-button {
-      background: #0057a8;
-      color: white;
-      padding: 0.8rem 1.6rem;
-      border: none;
-      margin-top: 1.5rem;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    .services-section {
-      padding: 4rem 2rem;
-      background: #fff;
-      text-align: center;
-    }
-
-    .services-section h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    .services-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-
-    .service-card {
-      background: #f1f1f1;
-      padding: 1.5rem;
-      border-radius: 12px;
-      width: 260px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-      text-align: left;
-    }
-
-    .service-card h3 {
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background: #e6f2ff;
-      font-size: 0.9rem;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; }
+    body { background: #f5f7fa; color: #222; line-height: 1.6; }
+    header { background: #111827; color: white; padding: 1.5rem 2rem; display: flex; justify-content: space-between; align-items: center; }
+    header h1 { font-size: 1.5rem; }
+    nav a { color: white; text-decoration: none; margin-left: 1.5rem; font-weight: 600; }
+    .hero { background: #e0f2fe; padding: 4rem 2rem; text-align: center; }
+    .hero h2 { font-size: 2.5rem; font-weight: 700; margin-bottom: 1rem; }
+    .hero p { font-size: 1.25rem; margin-bottom: 2rem; }
+    .cta-btn { background: #2563eb; color: white; padding: 0.75rem 1.5rem; border: none; border-radius: 8px; font-size: 1rem; text-decoration: none; }
+    .section { padding: 3rem 2rem; max-width: 1000px; margin: auto; }
+    .section-title { font-size: 2rem; font-weight: 700; text-align: center; margin-bottom: 2rem; }
+    .review-card { background: white; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); padding: 1.5rem; margin-bottom: 1.5rem; transition: transform 0.2s ease; }
+    .review-card:hover { transform: translateY(-4px); box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
+    .review-card h3 { margin-bottom: 0.25rem; }
+    .stars { color: #fbbf24; margin-bottom: 0.75rem; }
+    a.review-link { text-decoration: none; color: inherit; display: block; }
+    footer { background: #111827; color: white; text-align: center; padding: 1rem 0; margin-top: 3rem; }
   </style>
 </head>
-
 <body>
   <header>
-    <div class="logo">getITfixed</div>
+    <h1>getITfixed</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
@@ -123,32 +36,46 @@
   </header>
 
   <section class="hero">
-    <h1>Your One-Stop Tech Help</h1>
-    <p>We help seniors and families set up home Wi-Fi, phones, security cameras, and more — all with friendly, in-home support.</p>
-    <button class="cta-button">Get Started</button>
+    <h2>Tech Help You Can Trust</h2>
+    <p>From home networks to security cameras, getITfixed is your one-stop tech solution for seniors, families, and small businesses.</p>
+    <a class="cta-btn" href="tel:480-555-1234">Call Now: (480) 555-1234</a>
   </section>
 
-  <section class="services-section">
-    <h2>Popular Services</h2>
-    <div class="services-grid">
-      <div class="service-card">
-        <h3>Wi-Fi Setup</h3>
-        <p>Get strong, secure Wi-Fi throughout your home with our expert setup service.</p>
+  <section class="section">
+    <h2 class="section-title">Real Customer Reviews</h2>
+
+    <a class="review-link" href="https://g.co/kgs/XCHEhM4" target="_blank">
+      <div class="review-card">
+        <h3>Antonio Gonzalez <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"We were facing a major printer issue in our office. Dominic arrived same-day and had it fixed quickly — and affordably! Highly recommend getITfixed!"</p>
       </div>
-      <div class="service-card">
-        <h3>Security Cameras</h3>
-        <p>We'll install and configure indoor or outdoor cameras so you feel safe and in control.</p>
+    </a>
+
+    <a class="review-link" href="https://g.co/kgs/Vut4gsG" target="_blank">
+      <div class="review-card">
+        <h3>Annie M <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"Dominic fixed our PC fast and professionally. Even helped catch our dog when it ran out! Can't say enough great things about this service."</p>
       </div>
-      <div class="service-card">
-        <h3>Phone Help</h3>
-        <p>We teach you how to use your smartphone, fix issues, or transfer everything from your old phone.</p>
+    </a>
+
+    <a class="review-link" href="https://g.co/kgs/Fy9Vupa" target="_blank">
+      <div class="review-card">
+        <h3>Analeigha Q-Z <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
+        <p class="stars">★★★★★</p>
+        <p>"My laptop was crawling. Dominic got it running like new again — super fast, fair price, and explained everything. 10/10!"</p>
       </div>
+    </a>
+
+    <div style="text-align: center; margin-top: 2rem;">
+      <a class="cta-btn" href="reviews.html">Read More Reviews</a>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 getITfixed. All rights reserved.
+    <p>&copy; 2025 getITfixed — All rights reserved.</p>
   </footer>
 </body>
-
 </html>
+
